--- a/application/templates/play_game.html
+++ b/application/templates/play_game.html
@@ -11,13 +11,24 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
       />
     <link rel="stylesheet" href="../static/css/wordle_game.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body>
-    <h1> Wordle Clone </h1>
-    
-    <div id="game-board">
+<body background="{{ url_for('static', filename='images/background_score_list.png') }}">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+          <img src="{{ url_for('static', filename='images/website_name_otherpage.png') }}">
+        </a>
+  
+        <ul class="nav nav-pills">
+          <li class="nav-item"><a href="#" class="nav-link active" aria-current="page"><img src="{{ url_for('static', filename='images/navigation/puzzle.PNG') }}" style="width:200px;height:50px;"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link"><img src="{{ url_for('static', filename='images/navigation/score.PNG') }}" style="width:200px;height:50px;"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link"><img src="{{ url_for('static', filename='images/navigation/create.PNG') }}" style="width:200px;height:50px;"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link"><img src="{{ url_for('static', filename='images/navigation/profile.PNG') }}" style="width:200px;height:50px;"></a></li>
+        </ul>
+    </header>
 
-    </div>
+    <h2 id="puzzle-name"></h2>
+    <div id="game-board"></div>
     <div id="keyboard-cont">
         <div class="first-row">
             <button class="keyboard-button">q</button>
@@ -71,6 +82,8 @@
         let guessesRemaining = NUMBER_OF_GUESSES;
         let currentGuess = [];
         let nextLetter = 0;
+
+        document.getElementById("puzzle-name").innerHTML = puzzle.puzzle_name;
 
         function initBoard() {
             let board = document.getElementById("game-board");
@@ -191,6 +204,7 @@
         async function checkGuess () {
             let row = document.getElementsByClassName("letter-row")[NUMBER_OF_GUESSES - guessesRemaining]
             let guessString = '' 
+            var isSolved = true
 
             for (const val of currentGuess) {
                 guessString += val
@@ -202,6 +216,7 @@
             }
 
             //CHANGE THIS WHOLE BLOCK OF CODE INTO JQUERY
+            guessesRemaining -= 1;
             const submit_guess_url = {{ url_for("play-game.submitAnswer")|tojson }};
             let data = {
                 "puzzleID": puzzle.puzzle_id,
@@ -209,21 +224,57 @@
                 "remainingGuess": guessesRemaining
             };
 
-            fetch(submit_guess_url, {
+            await fetch(submit_guess_url, {
                 "method": "POST",
                 "headers": {"Content-Type": "application/json"},
                 "body": JSON.stringify(data),
             })
             .then((response) => response.json())
-            .then((json) => console.log(json));
-            guessesRemaining = guessesRemaining - 1;
+            .then((guessResult) => {
+                var letterColor = [];
+                for (let i = 0; i < guessResult.puzzleGuess.length; i++) {
+                    if(guessResult.puzzleGuess[i] == 0){
+                        letterColor.push('grey');
+                        isSolved = false
+                    }else if(guessResult.puzzleGuess[i] == 1){
+                        letterColor.push('yellow');
+                        isSolved = false
+                    }else if(guessResult.puzzleGuess[i] == 2){
+                        letterColor.push('green');
+                    }
+                }
+                for (let i = 0; i < letterColor.length; i++) {
+                    let box = row.children[i];
+                    let delay = 250 * i;
+                    setTimeout(() => {
+                    //flip box
+                        animateCSS(box, "flipInX");
+                        //shade box
+                        box.style.backgroundColor = letterColor[i];
+                        shadeKeyBoard(guessString.charAt(i) + "", letterColor[i]);
+                    }, delay);
+                }
+            });
+            if(isSolved){
+                toastr.success("You guessed right! Game over!");
+                guessesRemaining = 0;
+            } else {
+                currentGuess = [];
+                nextLetter = 0;
+                if (guessesRemaining === 0) {
+                    toastr.error("You've run out of guesses! Game over!");
+                }
+            }
         }
-
         initBoard()
     </script>
     <script
     src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+    crossorigin="anonymous"></script>
+    <script 
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
     crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     {% endblock %}
