--- a/application/static/css/wordle_game.css
+++ b/application/static/css/wordle_game.css
@@ -20,6 +20,8 @@ display: flex;
 justify-content: center;
 align-items: center;
 text-transform: uppercase;
+background: url(../gamepage/wordle_rectangle_original.PNG) no-repeat;
+background-size: 3rem 3rem;
 }
 
 .filled-box {
@@ -46,6 +48,23 @@ margin: 0.5rem 0;
 }
 
 .keyboard-button {
+background: url(../gamepage/wordle_rectangle_original.PNG) no-repeat;
+background-size: 3rem 3rem;
+height: 3rem;
+width: 3rem;
+font-size: 1rem;
+font-weight: 700;
+padding: 0.5rem;
+margin: 0 2px;
+cursor: pointer;
+text-transform: uppercase;
+}
+
+.keyboard-button-enter {
+background: url(../gamepage/wordle_rectangle_original.PNG) no-repeat;
+background-size: 4rem 3rem;
+height: 3rem;
+width: 4rem;
 font-size: 1rem;
 font-weight: 700;
 padding: 0.5rem;
