--- a/application/templates/play_game.html
+++ b/application/templates/play_game.html
@@ -13,59 +13,59 @@
     <link rel="stylesheet" href="../static/css/wordle_game.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body background="{{ url_for('static', filename='images/background_score_list.png') }}">
-    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+<body background="{{ url_for('static', filename='background_score_list.png') }}">
+    <header class="d-flex flex-wrap justify-content-center mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-          <img src="{{ url_for('static', filename='images/website_name_otherpage.png') }}">
+          <img src="{{ url_for('static', filename='website_name_otherpage.png') }}">
         </a>
-  
         <ul class="nav nav-pills">
-          <li class="nav-item"><a href="#" class="nav-link active" aria-current="page"><img src="{{ url_for('static', filename='images/navigation/puzzle.PNG') }}" style="width:200px;height:50px;"></a></li>
-          <li class="nav-item"><a href="#" class="nav-link"><img src="{{ url_for('static', filename='images/navigation/score.PNG') }}" style="width:200px;height:50px;"></a></li>
-          <li class="nav-item"><a href="#" class="nav-link"><img src="{{ url_for('static', filename='images/navigation/create.PNG') }}" style="width:200px;height:50px;"></a></li>
-          <li class="nav-item"><a href="#" class="nav-link"><img src="{{ url_for('static', filename='images/navigation/profile.PNG') }}" style="width:200px;height:50px;"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link active" aria-current="page"><img src="{{ url_for('static', filename='navigation/puzzle.PNG') }}" style="width:200px;height:50px;"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link"><img src="{{ url_for('static', filename='navigation/score.PNG') }}" style="width:200px;height:50px;"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link"><img src="{{ url_for('static', filename='navigation/create.PNG') }}" style="width:200px;height:50px;"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link"><img src="{{ url_for('static', filename='navigation/profile.PNG') }}" style="width:200px;height:50px;"></a></li>
         </ul>
     </header>
 
     <h2 id="puzzle-name"></h2>
-    <div id="game-board"></div>
-    <div id="keyboard-cont">
-        <div class="first-row">
-            <button class="keyboard-button">q</button>
-            <button class="keyboard-button">w</button>
-            <button class="keyboard-button">e</button>
-            <button class="keyboard-button">r</button>
-            <button class="keyboard-button">t</button>
-            <button class="keyboard-button">y</button>
-            <button class="keyboard-button">u</button>
-            <button class="keyboard-button">i</button>
-            <button class="keyboard-button">o</button>
-            <button class="keyboard-button">p</button>
-        </div>
-        <div class="second-row">
-            <button class="keyboard-button">a</button>
-            <button class="keyboard-button">s</button>
-            <button class="keyboard-button">d</button>
-            <button class="keyboard-button">f</button>
-            <button class="keyboard-button">g</button>
-            <button class="keyboard-button">h</button>
-            <button class="keyboard-button">j</button>
-            <button class="keyboard-button">k</button>
-            <button class="keyboard-button">l</button>
-        </div>
-        <div class="third-row">
-            <button class="keyboard-button">Del</button>
-            <button class="keyboard-button">z</button>
-            <button class="keyboard-button">x</button>
-            <button class="keyboard-button">c</button>
-            <button class="keyboard-button">v</button>
-            <button class="keyboard-button">b</button>
-            <button class="keyboard-button">n</button>
-            <button class="keyboard-button">m</button>
-            <button class="keyboard-button">Enter</button>
+    <div style="background-image:url({{ url_for('static', filename='gamepage/playboard_withscore.PNG') }});">
+        <div id="game-board"></div>
+        <div id="keyboard-cont">
+            <div class="first-row">
+                <button class="keyboard-button">q</button>
+                <button class="keyboard-button">w</button>
+                <button class="keyboard-button">e</button>
+                <button class="keyboard-button">r</button>
+                <button class="keyboard-button">t</button>
+                <button class="keyboard-button">y</button>
+                <button class="keyboard-button">u</button>
+                <button class="keyboard-button">i</button>
+                <button class="keyboard-button">o</button>
+                <button class="keyboard-button">p</button>
+            </div>
+            <div class="second-row">
+                <button class="keyboard-button">a</button>
+                <button class="keyboard-button">s</button>
+                <button class="keyboard-button">d</button>
+                <button class="keyboard-button">f</button>
+                <button class="keyboard-button">g</button>
+                <button class="keyboard-button">h</button>
+                <button class="keyboard-button">j</button>
+                <button class="keyboard-button">k</button>
+                <button class="keyboard-button">l</button>
+            </div>
+            <div class="third-row">
+                <button class="keyboard-button">Del</button>
+                <button class="keyboard-button">z</button>
+                <button class="keyboard-button">x</button>
+                <button class="keyboard-button">c</button>
+                <button class="keyboard-button">v</button>
+                <button class="keyboard-button">b</button>
+                <button class="keyboard-button">n</button>
+                <button class="keyboard-button">m</button>
+                <button class="keyboard-button-enter">Enter</button>
+            </div>
         </div>
     </div>
-
     <div id="comment-section">
         <ul id="comment-content">
             <div id="comment">
