--- a/application/templates/login_register.html
+++ b/application/templates/login_register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login and Register Page</title>
-    <link rel="stylesheet" href="../static/login_register.css" />
+    <link rel="stylesheet" href="../static/css/login_register.css"></script>
   </head>
   <body>
     <img
@@ -33,5 +33,69 @@
       alt="guest button"
     />
     <img class="cat_image" src="../static/loginpage/CAT.png" alt="a gray cat" />
+    <!-- The Login Modal -->
+    <div id="loginModal" class="modal">
+      <div class="modal-login-content">
+        <span class="close loginClose">&times;</span>
+        <!--<form id="loginForm">
+          Username: <input type="text" name="username" required /><br />
+          Password: <input type="password" name="password" required /><br />
+          <button type="submit">Login</button>
+        </form> -->
+        <form id="loginForm">
+          <input
+            type="text"
+            name="username"
+            placeholder="Username"
+            required
+          /><br />
+          <input
+            type="password"
+            name="password"
+            placeholder="Password"
+            required
+          /><br />
+          <button type="submit"></button>
+        </form>
+      </div>
+    </div>
+    <!-- Sign up Modal -->
+    <div id="signupModal" class="modal">
+      <div class="modal-signup-content">
+        <span class="close signupClose">&times;</span>
+        <!--<form id="signupForm">
+          Username: <input type="text" name="username" required /><br />
+          Email: <input type="email" name="email" required /><br />
+          Password: <input type="password" name="password" required /><br />
+          <button type="submit">Sign Up</button>
+        </form>-->
+        <form id="signupForm">
+          <input
+            type="text"
+            name="username"
+            placeholder="Username"
+            required
+          /><br />
+          <input type="email" name="email" placeholder="Email" required /><br />
+          <input
+            type="password"
+            name="password"
+            placeholder="Password"
+            required
+          /><br />
+          <input
+            type="password"
+            name="confirm_password"
+            placeholder="Confirm Password"
+            required
+          /><br />
+          <button type="submit"></button>
+        </form>
+      </div>
+    </div>
+    <script
+      type="text/javascript"
+      src="../static/js/login_register.js"
+    ></script>
   </body>
 </html>
