--- a/application/templates/puzzle_list.html
+++ b/application/templates/puzzle_list.html
@@ -2,15 +2,153 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Available Puzzles</title>
+    <title>Wordle Puzzle List</title>
+    <link rel="stylesheet" href="../static/css/wordle_game.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/footer/footer_styles.css"/>
 </head>
-<body>
-    <h1>Available Puzzles</h1>
-    <ul>
-        {% for puzzle in puzzles %}
-        <li>{{ puzzle.puzzle_name }} by {{ puzzle.User.username }} - Attempts: {{ puzzle.number_of_attempt }}, Score: {{ puzzle.puzzle_score }}</li>
-        {% endfor %}
-    </ul>
+
+<body style="background-image: url('../static/background_score_list.png'); background-size: cover; background-repeat: no-repeat; background-position: center center;">
+    
+    <header class="d-flex flex-wrap justify-content-center mb-4 border-bottom">
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <img src="{{ url_for('static', filename='website_name_otherpage.png') }}" style="width:200px;height:50;">
+        </a>
+        <ul class="nav nav-pills">
+            <li class="nav-item"><a href="#" class="nav-link active" aria-current="page"><img src="{{ url_for('static', filename='navigation/puzzle1.PNG') }}" style="width:200px;"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link"><img src="{{ url_for('static', filename='navigation/score1.PNG') }}" style="width:200px;"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link"><img src="{{ url_for('static', filename='navigation/create1.PNG') }}" style="width:200px;"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link"><img src="{{ url_for('static', filename='navigation/profile1.PNG') }}" style="width:200px;"></a></li>
+        </ul>
+    </header>
+
+    <div class="wooden">
+
+        <h1><img src="../static/puzzlelist/Puzzle List.png"></h1>
+        <input type="text" id="searchInput" onkeyup="filterItems()" placeholder="Search for puzzles...">
+        <h2><img src="../static/footer/Screenshot 2024-05-13 081047.png"></h2>
+
+        <!-- 
+            <ul>
+                {% for i in range(15) %}
+                    {% if loop.index <= puzzles|length %}
+                        {% set puzzle = puzzles[loop.index - 1] %}
+                        <li><a href="/play-game/{{ puzzle.puzzle_name }}">
+                            {{ puzzle.puzzle_name }} by {{ puzzle.User.username }} - Attempts: {{ puzzle.number_of_attempt }}, Score: {{ puzzle.puzzle_score }}
+                        </a>
+                        <br>
+                        <img src="../static/footer/Screenshot 2024-05-13 082358.png" alt="Image">
+                        </li>
+                        {% else %}
+                        <li><span style="color: transparent;">-</span></li>
+                    {% endif %}
+                {% endfor %}
+            </ul>
+        -->
+        <ul id="itemList">
+            {% for i in range(11) %}
+                {% if loop.index <= puzzles|length %}
+                    {% set puzzle = puzzles[loop.index - 1] %}
+                    <li class="filterable">
+                        <a href="/play-game/{{ puzzle.puzzle_name }}">
+                            {{ puzzle.puzzle_name }} by {{ puzzle.User.username }} - Attempts: {{ puzzle.number_of_attempt }}, Score: {{ puzzle.puzzle_score }}
+                        </a>
+                    </li>
+                {% else %}
+                    <li>
+                        <!-- This block will show the image even if there's no item -->
+                        <span style="color: transparent;">-</span>
+                    </li>
+                {% endif %}
+                <!-- Image will appear 9 times -->
+                {% if loop.index < 9 %}
+                    <li>
+                        <img src="../static/footer/Screenshot 2024-05-13 082358.png" alt="Image">
+                    </li>
+                {% endif %}
+            {% endfor %}
+        </ul>
+
+    </div>
+
+        <footer>
+            <p>Group #</p>
+        </footer>
+
 </body>
+
+<script>
+    function filterItems() {
+        var input, filter, ul, li, a, i, txtValue;
+        input = document.getElementById('searchInput');
+        filter = input.value.toUpperCase();
+        ul = document.getElementById('itemList');
+        li = ul.getElementsByClassName('filterable'); // Filterable items only
+    
+        for (i = 0; i < li.length; i++) {
+            a = li[i].getElementsByTagName('a')[0];
+            txtValue = a.textContent || a.innerText;
+            if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                li[i].style.display = ''; // Show filtered items
+            } else {
+                li[i].style.display = 'none'; // Hide filtered items
+            }
+        }
+    }
+</script>
+    
+<style>
+
+    #searchInput {
+
+        position: absolute;
+        top: 360px; /* Adjust the top position as per your requirement */
+        left: 1000px; /* Adjust the left position as per your requirement */
+
+        background-image: url('../static/searchbar/searchbar_total1.PNG');
+        background-size: cover; /* Adjust the size as needed */
+        background-repeat: no-repeat;
+        background-position: center; /* Adjust position of the image */
+        padding-left: 25px;
+        padding-right: 35px; /* Leave space for the search icon */
+        border: 1px solid #ccc; /* Add border for better appearance */
+        border-radius: 5px; /* Add rounded corners */
+        height: 45px; /* Adjust height as needed */
+        width: 300px; /* Adjust width as needed */
+    }
+
+    .wooden {
+        background-image: url('../static/leaderboard/wooden_frame.png'); /* Replace 'background_image.jpg' with your image file */
+        background-size: 85%; /* This makes sure the background image covers the entire area of the h1 tag */
+        background-repeat: no-repeat;
+        background-position: center top; /* Center the background image */
+        padding: 20px; /* Adding some padding to give space around the content */
+        text-align: center; /* Centering the content */
+    }
+
+    .wooden h1 {
+        margin-top: 100px; /* Adjust the space between the top of the container and the h1 text */
+        line-height: 1.5; /* Adjust the line height to lower the text */
+    }
+
+    .wooden ul {
+        list-style: none; /* Remove default list styles */
+        padding: 0; /* Remove default padding */
+    }
+
+    /* .wooden ul li {
+        margin-bottom: 10px; 
+    } */
+
+    /*.wooden ul li a {
+        text-decoration: none; 
+        border-bottom: 1px dashed black; 
+        padding-bottom: 5px; 
+        display: inline-block; 
+    }*/
+
+</style>
+
 </html>
