--- a/application/templates/puzzle_list.html
+++ b/application/templates/puzzle_list.html
@@ -74,7 +74,7 @@
     </div>
 
         <footer>
-            <p>Group #</p>
+            <p>Group 21 - Wordle Maker</p>
         </footer>
 
 </body>
