Core feature of creating the wordle game finished: html and py scripts

--- a/application/templates/create_game.html
+++ b/application/templates/create_game.html
@@ -7,7 +7,7 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
-            background-image: url('/application/static/background_score_list.png');
+            background-image: url('/static/background_score_list.png');
             background-size: cover;
         }
 
@@ -19,20 +19,20 @@
             border: 1px solid #ccc;
             border-radius: 4px;
             background-color: #f8f8f8;
-            background-image: url('/application/static/gamepage/commentboard.png');
+            background-image: url('/static/gamepage/commentboard.png');
             background-size: 30px 30px;
             background-position: 10px center;
             padding-left: 45px;
 
         button {
-            width: calc(100% - 40px); /* 减去图标的宽度 */
+            width: calc(100% - 40px);
             padding: 14px 20px;
             background-color: #4CAF50;
             color: white;
             border: none;
             border-radius: 4px;
             cursor: pointer;
-            position: relative; /* 设置相对定位用于图标 */
+            position: relative;
         }
 
         button::before {
@@ -43,7 +43,7 @@
             transform: translateY(-50%);
             height: 30px;
             width: 30px;
-            background-image: url('/application/static/createpage/upload_button.png');
+            background-image: url('/static/createpage/upload_button.png');
             background-size: cover;
         }
 
