--- a/application/templates/puzzle_list.html
+++ b/application/templates/puzzle_list.html
@@ -7,7 +7,7 @@
     <title>Wordle Puzzle List</title>
     <link rel="stylesheet" href="../static/css/wordle_game.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/footer/footer_styles.css"/>
+    <link rel="stylesheet" href="../static/puzzle_list/footer_styles.css"/>
 </head>
 
 <body style="background-image: url('../static/background_score_list.png'); background-size: cover; background-repeat: no-repeat; background-position: center center;">
@@ -17,55 +17,59 @@
             <img src="{{ url_for('static', filename='website_name_otherpage.png') }}" style="width:200px;height:50;">
         </a>
         <ul class="nav nav-pills">
-            <li class="nav-item"><a href="#" class="nav-link active" aria-current="page"><img src="{{ url_for('static', filename='navigation/puzzle1.PNG') }}" style="width:200px;"></a></li>
-            <li class="nav-item"><a href="#" class="nav-link"><img src="{{ url_for('static', filename='navigation/score1.PNG') }}" style="width:200px;"></a></li>
-            <li class="nav-item"><a href="#" class="nav-link"><img src="{{ url_for('static', filename='navigation/create1.PNG') }}" style="width:200px;"></a></li>
-            <li class="nav-item"><a href="#" class="nav-link"><img src="{{ url_for('static', filename='navigation/profile1.PNG') }}" style="width:200px;"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link active" aria-current="page"><img src="{{ url_for('static', filename='navigation/puzzle.PNG') }}" style="width:200px;"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link"><img src="{{ url_for('static', filename='navigation/score.PNG') }}" style="width:200px;"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link"><img src="{{ url_for('static', filename='navigation/create.PNG') }}" style="width:200px;"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link"><img src="{{ url_for('static', filename='navigation/profile.PNG') }}" style="width:200px;"></a></li>
         </ul>
     </header>
 
     <div class="wooden">
-
-        <h1><img src="../static/puzzlelist/Puzzle List.png"></h1>
+        
+        <h1><img src="../static/puzzle_list/Puzzle List.png"></h1>
         <input type="text" id="searchInput" onkeyup="filterItems()" placeholder="Search for puzzles...">
-        <h2><img src="../static/footer/Screenshot 2024-05-13 081047.png"></h2>
+        <h2><img src="../static/puzzle_list/line.png"></h2>
 
-        <!-- 
-            <ul>
-                {% for i in range(15) %}
-                    {% if loop.index <= puzzles|length %}
-                        {% set puzzle = puzzles[loop.index - 1] %}
-                        <li><a href="/play-game/{{ puzzle.puzzle_name }}">
-                            {{ puzzle.puzzle_name }} by {{ puzzle.User.username }} - Attempts: {{ puzzle.number_of_attempt }}, Score: {{ puzzle.puzzle_score }}
-                        </a>
-                        <br>
-                        <img src="../static/footer/Screenshot 2024-05-13 082358.png" alt="Image">
-                        </li>
-                        {% else %}
-                        <li><span style="color: transparent;">-</span></li>
-                    {% endif %}
-                {% endfor %}
-            </ul>
-        -->
+        <!-- <ul class="list1">
+            {% for i in range(11) %}
+                {% if loop.index <= puzzles|length %}
+                    {% set puzzle = puzzles[loop.index - 1] %}
+                    <li  class="filterable">
+                        <span style="color: transparent;">-</span>
+                    </li>
+                {% else %}
+                    <li>
+                        <span style="color: transparent;">-</span>
+                    </li>
+                {% endif %}
+                
+                {% if loop.index < 9 %}
+                    <li>
+                        <img src="../static/puzzle_list/dash_line.png" alt="Image">
+                    </li>
+                {% endif %}
+            {% endfor %}
+        </ul> -->
+
         <ul id="itemList">
             {% for i in range(11) %}
                 {% if loop.index <= puzzles|length %}
                     {% set puzzle = puzzles[loop.index - 1] %}
-                    <li class="filterable">
+                    <li  class="filterable">
                         <a href="/play-game/{{ puzzle.puzzle_name }}">
                             {{ puzzle.puzzle_name }} by {{ puzzle.User.username }} - Attempts: {{ puzzle.number_of_attempt }}, Score: {{ puzzle.puzzle_score }}
                         </a>
+                        <span style="color: transparent;">-</span>
                     </li>
                 {% else %}
                     <li>
-                        <!-- This block will show the image even if there's no item -->
                         <span style="color: transparent;">-</span>
                     </li>
                 {% endif %}
-                <!-- Image will appear 9 times -->
+                
                 {% if loop.index < 9 %}
                     <li>
-                        <img src="../static/footer/Screenshot 2024-05-13 082358.png" alt="Image">
+                        <img src="../static/puzzle_list/dash_line.png" alt="Image">
                     </li>
                 {% endif %}
             {% endfor %}
@@ -74,6 +78,7 @@
     </div>
 
         <footer>
+            <a href="https://github.com/wuryantoAji/cits5505GroupProject.git" target="_blank"><img src="../static/puzzle_list/githubicon.png" width="25px" height="25px"></a>
             <p>Group 21 - Wordle Maker</p>
         </footer>
 
@@ -85,19 +90,69 @@
         input = document.getElementById('searchInput');
         filter = input.value.toUpperCase();
         ul = document.getElementById('itemList');
-        li = ul.getElementsByClassName('filterable'); // Filterable items only
+        li = ul.getElementsByClassName('filterable');
     
         for (i = 0; i < li.length; i++) {
             a = li[i].getElementsByTagName('a')[0];
             txtValue = a.textContent || a.innerText;
             if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                li[i].style.display = ''; // Show filtered items
+                li[i].style.visibility = 'visible';
             } else {
-                li[i].style.display = 'none'; // Hide filtered items
+                li[i].style.visibility = 'collapse';
             }
         }
     }
 </script>
+
+<!-- <script>
+    var originalItemList = []; 
+
+    window.onload = function() {
+        var ul = document.getElementById('itemList');
+        var li = ul.getElementsByClassName('filterable');
+        for (var i = 0; i < li.length; i++) {
+            originalItemList.push(li[i].cloneNode(true)); 
+        }
+    };
+
+    function filterItems() {
+        var input, filter, ul, li, a, i, txtValue;
+        input = document.getElementById('searchInput');
+        filter = input.value.toUpperCase();
+        ul = document.getElementById('itemList');
+        li = ul.getElementsByClassName('filterable'); 
+        var filteredItems = [];
+
+        for (i = 0; i < li.length; i++) {
+            a = li[i].getElementsByTagName('a')[0];
+            txtValue = a.textContent || a.innerText;
+            if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                li[i].style.display = ''; 
+                filteredItems.push(li[i]); 
+            } else {
+                li[i].style.display = 'none'; 
+            }
+        }
+
+        
+        if (filter === '') {
+            ul.innerHTML = ''; 
+            originalItemList.forEach(function(item) {
+                ul.appendChild(item.cloneNode(true)); 
+            });
+        } else {
+            
+            ul.innerHTML = ''; 
+            filteredItems.forEach(function(item) {
+                ul.appendChild(item); 
+            });
+        }
+    }
+</script> -->
+
+
+
+
     
 <style>
 
@@ -119,11 +174,12 @@
         width: 300px; /* Adjust width as needed */
     }
 
+
     .wooden {
         background-image: url('../static/leaderboard/wooden_frame.png'); /* Replace 'background_image.jpg' with your image file */
         background-size: 85%; /* This makes sure the background image covers the entire area of the h1 tag */
         background-repeat: no-repeat;
-        background-position: center top; /* Center the background image */
+        background-position: center; /* Center the background image */
         padding: 20px; /* Adding some padding to give space around the content */
         text-align: center; /* Centering the content */
     }
@@ -137,17 +193,6 @@
         list-style: none; /* Remove default list styles */
         padding: 0; /* Remove default padding */
     }
-
-    /* .wooden ul li {
-        margin-bottom: 10px; 
-    } */
-
-    /*.wooden ul li a {
-        text-decoration: none; 
-        border-bottom: 1px dashed black; 
-        padding-bottom: 5px; 
-        display: inline-block; 
-    }*/
 
 </style>
 
