integrate all pages in the application progress

--- a/application/templates/404.html
+++ b/application/templates/404.html
@@ -11,7 +11,7 @@
     <div class="notfound">
       PAGE NOT FOUND<br>
     </div>
-    <a href="login_register.html">
+    <a href="/login-register/">
       <img class="tohome_button" src="../static/404page/backhome_button.PNG" alt="a button link to home page">
     </a>
   </body>
