--- a/application/templates/login_register.html
+++ b/application/templates/login_register.html
@@ -93,6 +93,7 @@
         </form>
       </div>
     </div>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script
       type="text/javascript"
       src="../static/js/login_register.js"
