--- a/application/templates/play_game.html
+++ b/application/templates/play_game.html
@@ -12,6 +12,7 @@
       />
     <link rel="stylesheet" href="../static/css/wordle_game.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/puzzle_list/footer_styles.css"/>
 </head>
 <body background="{{ url_for('static', filename='background_score_list.png') }}">
     {% include "navbar.html" %}
