--- a/application/templates/create_game.html
+++ b/application/templates/create_game.html
@@ -23,6 +23,7 @@
             background-size: 30px 30px;
             background-position: 10px center;
             padding-left: 45px;
+        }
 
         button {
             width: calc(100% - 40px);
@@ -51,20 +52,50 @@
             background-color: #45a049;
         }
     </style>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet"/>
+    <link
+        rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+        />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/puzzle_list/footer_styles.css"/>
 </head>
 <body>
+    {% include "navbar.html" %}
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
     <h1>Create Your Wordle Game</h1>
-    <form action="/create_game" method="post">
+    <form action="/create-game/create_game" method="post" id="createGameForm">
+        {{ createGame.csrf_token }}
         <label for="form_game_name">Please give a unique name for your wordle game:</label>
-        <input type="text" name="form_game_name" placeholder="Please use letters and numbers" required><br><br>
+        {{ createGame.game_name(placeholder="Please use letters and numbers") }}<br><br>
 
         <label for="form_wordle_solution">Please type in the correct Wordle solution:</label>
-        <input type="text" name="form_wordle_solution" placeholder="Please use a real word" required><br><br>
+        {{ createGame.wordle_solution(placeholder="Please use a real word") }}<br><br>
 
         <label for="form_number_of_attempts">How many attempts are allowed for your Wordle game:</label>
-        <input type="number" name="form_number_of_attempts" placeholder="Please use a number" required><br><br>
+        {{ createGame.number_of_attempt(placeholder="Please use a number") }}<br><br>
 
         <button type="submit">Submit and Create</button>
     </form>
+    {% include "footer.html" %}
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    {% block javascript %}
+    <script>
+        $("#createGameForm").submit(function (event) {
+            event.preventDefault(); // block the default submission of the form
+            document.getElementById('createGameForm').submit();
+        });
+    </script>
+    {% endblock %}
 </body>
 </html>
