--- a/application/templates/navbar.html
+++ b/application/templates/navbar.html
@@ -1,12 +1,12 @@
 <header class="d-flex flex-wrap justify-content-center mb-4 border-bottom">
-    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+    <a href="/login-register/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
         <img src="{{ url_for('static', filename='website_name_icon.png') }}" style="width:200px;height:50;">
     </a>
     <ul class="nav nav-pills">
         <li class="nav-item"><a href="/puzzle-list/" class="nav-link"><img src="{{ url_for('static', filename='navigation/nav_puzzle.PNG') }}" style="width:200px;"></a></li>
         <li class="nav-item"><a href="#" class="nav-link"><img src="{{ url_for('static', filename='navigation/nav_score.PNG') }}" style="width:200px;"></a></li>
         {% if isLogin==True %}
-        <li class="nav-item"><a href="#" class="nav-link"><img src="{{ url_for('static', filename='navigation/nav_create.PNG') }}" style="width:200px;"></a></li>
+        <li class="nav-item"><a href="/create-game/" class="nav-link"><img src="{{ url_for('static', filename='navigation/nav_create.PNG') }}" style="width:200px;"></a></li>
         <li class="nav-item"><a href="#" class="nav-link"><img src="{{ url_for('static', filename='navigation/nav_profile.PNG') }}" style="width:200px;"></a></li>
         {% endif %}
     </ul>
