--- a/application/templates/puzzle_list.html
+++ b/application/templates/puzzle_list.html
@@ -9,62 +9,63 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/puzzle_list/footer_styles.css"/>
 </head>
-<body style="background-image: url('../static/background_score_list.png'); background-size: cover; background-repeat: no-repeat; background-position: center center;">
+<body background="{{ url_for('static', filename='background_score_list.png') }}">
     
     {% include "navbar.html" %}
-    <div class="wooden">
-        
-        <h1><img src="../static/puzzle_list/Puzzle List.png"></h1>
-        <input type="text" id="searchInput" onkeyup="filterItems()" placeholder="Search for puzzles...">
-        <h2><img src="../static/puzzle_list/line.png"></h2>
+    <div style="display: flex;justify-content: center;align-items: center;flex-direction: column;">
+        <div class="wooden">
+            
+            <h1><img src="../static/puzzle_list/Puzzle List.png"></h1>
+            <input type="text" id="searchInput" onkeyup="filterItems()" placeholder="Search for puzzles...">
+            <h2><img src="../static/puzzle_list/line.png"></h2>
 
-        <!-- <ul class="list1">
-            {% for i in range(11) %}
-                {% if loop.index <= puzzles|length %}
-                    {% set puzzle = puzzles[loop.index - 1] %}
-                    <li  class="filterable">
-                        <span style="color: transparent;">-</span>
-                    </li>
-                {% else %}
-                    <li>
-                        <span style="color: transparent;">-</span>
-                    </li>
-                {% endif %}
-                
-                {% if loop.index < 9 %}
-                    <li>
-                        <img src="../static/puzzle_list/dash_line.png" alt="Image">
-                    </li>
-                {% endif %}
-            {% endfor %}
-        </ul> -->
+            <!-- <ul class="list1">
+                {% for i in range(11) %}
+                    {% if loop.index <= puzzles|length %}
+                        {% set puzzle = puzzles[loop.index - 1] %}
+                        <li  class="filterable">
+                            <span style="color: transparent;">-</span>
+                        </li>
+                    {% else %}
+                        <li>
+                            <span style="color: transparent;">-</span>
+                        </li>
+                    {% endif %}
+                    
+                    {% if loop.index < 9 %}
+                        <li>
+                            <img src="../static/puzzle_list/dash_line.png" alt="Image">
+                        </li>
+                    {% endif %}
+                {% endfor %}
+            </ul> -->
 
-        <ul id="itemList">
-            {% for i in range(11) %}
-                {% if loop.index <= puzzles|length %}
-                    {% set puzzle = puzzles[loop.index - 1] %}
-                    <li  class="filterable">
-                        <a href="/play-game/{{ puzzle.puzzle_name }}">
-                            {{ puzzle.puzzle_name }} by {{ puzzle.User.username }} - Numbers Played: {{ puzzle.times_puzzle_played }}, Score: {{ puzzle.puzzle_score }}
-                        </a>
-                        <span style="color: transparent;">-</span>
-                    </li>
-                {% else %}
-                    <li>
-                        <span style="color: transparent;">-</span>
-                    </li>
-                {% endif %}
-                
-                {% if loop.index < 9 %}
-                    <li>
-                        <img src="../static/puzzle_list/dash_line.png" alt="Image">
-                    </li>
-                {% endif %}
-            {% endfor %}
-        </ul>
+            <ul id="itemList">
+                {% for i in range(11) %}
+                    {% if loop.index <= puzzles|length %}
+                        {% set puzzle = puzzles[loop.index - 1] %}
+                        <li  class="filterable">
+                            <a href="/play-game/{{ puzzle.puzzle_name }}">
+                                {{ puzzle.puzzle_name }} by {{ puzzle.User.username }} - Numbers Played: {{ puzzle.times_puzzle_played }}, Score: {{ puzzle.puzzle_score }}
+                            </a>
+                            <span style="color: transparent;">-</span>
+                        </li>
+                    {% else %}
+                        <li>
+                            <span style="color: transparent;">-</span>
+                        </li>
+                    {% endif %}
+                    
+                    {% if loop.index < 9 %}
+                        <li>
+                            <img src="../static/puzzle_list/dash_line.png" alt="Image">
+                        </li>
+                    {% endif %}
+                {% endfor %}
+            </ul>
 
+        </div>
     </div>
-
      
     {% include "footer.html" %}  
 
@@ -143,8 +144,6 @@
 <style>
 
     #searchInput {
-
-        position: absolute;
         top: 360px; /* Adjust the top position as per your requirement */
         left: 1000px; /* Adjust the left position as per your requirement */
 
@@ -168,6 +167,8 @@
         background-position: center; /* Center the background image */
         padding: 20px; /* Adding some padding to give space around the content */
         text-align: center; /* Centering the content */
+        width: 80%;
+        height: auto;
     }
 
     .wooden h1 {
