finished home page's .py, .css and .html; clicking the navigation bar could redirect into corresponding page

--- a/application/static/css/home.css
+++ b/application/static/css/home.css
@@ -5,7 +5,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-image: url('../background_score_list.png');
+    background-image: url("../loginpage/BACKGROUND-PIC.png");
     background-size: cover;
     background-position: center;
 }
@@ -14,7 +14,6 @@ nav {
     position: relative;
     background-color: transparent;
     width: 100%; 
-
 }
 
 ul.nav-list {
