--- a/application/templates/navbar.html
+++ b/application/templates/navbar.html
@@ -1,8 +1,6 @@
 <head>
     <style>        
         header {
-        box-shadow: 0px 2px 4px #a69999;
-        padding: 10px 24px;
         position: relative;
         z-index: 1200;
         }
@@ -10,8 +8,8 @@
         header nav {
         display: flex;
         align-items: center;
-        background-color: #fff;
         width: 100%;
+        padding: 1%;
         }
 
         .website_name {
@@ -66,7 +64,7 @@
           /></a>
         </li>
         <li>
-          <a href="profile.html"
+          <a href="/profile/"
             ><img src="../static/navigation/nav_profile.PNG" alt="Profile"
           /></a>
         </li>
