--- a/application/templates/footer.html
+++ b/application/templates/footer.html
@@ -1,4 +1,3 @@
 <footer>
-    <a href="https://github.com/wuryantoAji/cits5505GroupProject.git" target="_blank"><img src="../static/puzzle_list/githubicon.png" width="25px" height="25px"></a>
-    <p>Group 21 - Wordle Maker</p>
+    <a href="https://github.com/wuryantoAji/cits5505GroupProject.git" target="_blank"><div style="display: flex;"><img src="../static/puzzle_list/githubicon.png" width="25px" height="25px"><p>Group 21 - Wordle Maker</p></div></a>
 </footer>
