--- a/application/templates/profile.html
+++ b/application/templates/profile.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/puzzle_list/footer_styles.css"/>
   </head>
-  <body background="{{ url_for('static', filename='background_score_list.png') }}" style="background-size: cover;">
+  <body>
     {% include "navbar.html" %}
     <div class="username-section">
       <span id="username">{{ username }}</span>
@@ -47,7 +47,7 @@
       </div>
     </div>
     <div class="logout">
-      <button class="btn btn-danger">Logout</button>
+      <button class="btn btn-danger" style="margin:2%">Logout</button>
     </div>
     {% include "footer.html" %}
   </body>
