--- a/application/templates/404.html
+++ b/application/templates/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>404 Page</title>
-    <link rel="stylesheet" href="../static/css/404.css"></script>
+    <link rel="stylesheet" href="../static/css/404.css">
   </head>
   <body>
     <img class="sign" src="../static/404page/404sign.PNG" alt="image indicating 404 page">
