--- a/application/templates/login_register.html
+++ b/application/templates/login_register.html
@@ -10,7 +10,7 @@
         />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Login and Register Page</title>
-    <link rel="stylesheet" href="../static/css/login_register.css"></script>
+    <link rel="stylesheet" href="../static/css/login_register.css">
   </head>
   <body>
     <img
@@ -20,7 +20,7 @@
     />
     <img
       class="website_name"
-      src="../static/loginpage/website name.png"
+      src="../static/loginpage/website_name.png"
       alt="website name: wordle game"
     />
     {% with messages = get_flashed_messages(with_categories=true) %}
