--- a/application/templates/login_register.html
+++ b/application/templates/login_register.html
@@ -42,6 +42,9 @@
       alt="guest button"
     />
     <img class="cat_image" src="../static/loginpage/CAT.png" alt="a gray cat" />
+    <img class="introchat" src="../static/loginpage/chatbubble.PNG" alt="introduction bubble">
+    <img class="introword" src="../static/loginpage/intro.png" alt="introduction of the website">
+    
     <!-- The Login Modal -->
     <div id="loginModal" class="modal">
       <div class="modal-login-content">
