--- a/application/templates/leaderboard.html
+++ b/application/templates/leaderboard.html
@@ -1,72 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leaderboard</title>
-    <link rel="stylesheet" href="../static/css/leaderboard.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/puzzle_list/footer_styles.css"/>
-</head>
-<nav>
-    <ul class="nav-list">
-        <li class="nav-home"><a href="/home" class="nav-link" data-target="home"><img src="{{ url_for('static', filename='website_name_icon.png') }}" alt="Home Page"></a></li>
-        <li class="nav-button"><a href="/puzzle-list" class="nav-link" data-target="puzzle-list"><img src="{{ url_for('static', filename='navigation/nav_puzzle.png') }}" alt="Puzzle"></a></li>
-        <li class="nav-button"><a href="/create-game" class="nav-link" data-target="create-game"><img src="{{ url_for('static', filename='navigation/nav_create.png') }}" alt="Create"></a></li>
-        <li class="nav-button"><a href="/profile" class="nav-link" data-target="profile"><img src="{{ url_for('static', filename='navigation/nav_profile.png') }}" alt="Profile"></a></li>
-        <li class="nav-button"><a href="/leaderboard" class="nav-link" data-target="leaderboard"><img src="{{ url_for('static', filename='navigation/nav_score.png') }}" alt="Score"></a></li>
-    </ul>
-</nav>
-<header>
-    <h1>Leaderboard</h1>
-    <input type="text" id="searchInput" onkeyup="filterItems()" placeholder="Search for User Name...">
-</header>
-<body>
+    <link rel="stylesheet" href="../static/css/leaderboard.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../static/puzzle_list/footer_styles.css" />
+  </head>
+
+  <body>
+    {% include "navbar.html" %}
+    <header>
+      <h1>Leaderboard</h1>
+      <input
+        type="text"
+        id="searchInput"
+        onkeyup="filterItems()"
+        placeholder="Search for User Name..."
+      />
+    </header>
     <div class="wooden">
-        <h2><img src="../static/puzzle_list/line.png"></h2>
-        <ul id="itemList">
-            {% for user in users %}
-                <li class="filterable">
-                    <a href="/profile/{{ user.username }}">
-                        {{ user.username }} - Total Score: {{ user.overall_score }}}
-                    </a>
-                </li>
-                {% if loop.index < 10 %}
-                    <li>
-                        <img src="../static/puzzle_list/dash_line.png" alt="Dash Line Image">
-                    </li>
-                {% endif %}
-            {% endfor %}
-        </ul>
+      <h2><img src="../static/puzzle_list/line.png" /></h2>
+      <ul id="itemList">
+        {% for user in users %}
+        <li class="filterable">
+          <a href="/profile/{{ user.username }}">
+            {{ user.username }} - Total Score: {{ user.overall_score }}}
+          </a>
+        </li>
+        {% if loop.index < 10 %}
+        <li>
+          <img
+            src="../static/puzzle_list/dash_line.png"
+            alt="Dash Line Image"
+          />
+        </li>
+        {% endif %} {% endfor %}
+      </ul>
     </div>
-    
-    <footer>
-        <a href="https://github.com/wuryantoAji/cits5505GroupProject.git" target="_blank"><img src="../static/puzzle_list/githubicon.png" width="25px" height="25px"></a>
-        <p>Group 21 - Wordle Maker</p>
-    </footer>
-</body>
 
-<script>
-function filterItems() {
-    var input, filter, ul, li, a, i, txtValue;
-    input = document.getElementById('searchInput');
-    filter = input.value.toUpperCase();
-    ul = document.getElementById('itemList');
-    li = ul.getElementsByClassName('filterable');
+    {% include "footer.html" %}
 
-    //Loop through all list items, and hide those who do not match the search query
-    for (i = 0; i < li.length; i++) {
-        a = li[i].getElementsByTagName('a')[0];
-        //Get the text content of the <a> tag
-        txtValue = a.textContent || a.innerText;
-        if (txtValue.toUpperCase().indexOf(filter) > -1) {
-            li[i].style.display = '';
-        } else {
-            li[i].style.display = 'none';
+    <script>
+      function filterItems() {
+        var input, filter, ul, li, a, i, txtValue;
+        input = document.getElementById("searchInput");
+        filter = input.value.toUpperCase();
+        ul = document.getElementById("itemList");
+        li = ul.getElementsByClassName("filterable");
+
+        //Loop through all list items, and hide those who do not match the search query
+        for (i = 0; i < li.length; i++) {
+          a = li[i].getElementsByTagName("a")[0];
+          //Get the text content of the <a> tag
+          txtValue = a.textContent || a.innerText;
+          if (txtValue.toUpperCase().indexOf(filter) > -1) {
+            li[i].style.display = "";
+          } else {
+            li[i].style.display = "none";
+          }
         }
-    }
-}
-</script>
-
+      }
+    </script>
+  </body>
 </html>
