minor bug fix and add unit test

--- a/application/templates/navbar.html
+++ b/application/templates/navbar.html
@@ -53,7 +53,7 @@
           /></a>
         </li>
         <li>
-          <a href="#score"
+          <a href="/leaderboard/"
             ><img class="icon_score"  src="../static/navigation/nav_score1.PNG" alt="Score"
           /></a>
         </li>
@@ -64,7 +64,7 @@
           /></a>
         </li>
         <li>
-          <a href="/profile/"
+          <a href="/profile/{{ username }}"
             ><img src="../static/navigation/nav_profile.PNG" alt="Profile"
           /></a>
         </li>
