--- a/application/templates/leaderboard.html
+++ b/application/templates/leaderboard.html
@@ -9,27 +9,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/puzzle_list/footer_styles.css"/>
 </head>
-<nav>
-    <ul class="nav-list">
-        <li class="nav-home"><a href="/home" class="nav-link" data-target="home"><img src="{{ url_for('static', filename='website_name_icon.png') }}" alt="Home Page"></a></li>
-        <li class="nav-button"><a href="/puzzle-list" class="nav-link" data-target="puzzle-list"><img src="{{ url_for('static', filename='navigation/nav_puzzle.png') }}" alt="Puzzle"></a></li>
-        <li class="nav-button"><a href="/create-game" class="nav-link" data-target="create-game"><img src="{{ url_for('static', filename='navigation/nav_create.png') }}" alt="Create"></a></li>
-        <li class="nav-button"><a href="/profile" class="nav-link" data-target="profile"><img src="{{ url_for('static', filename='navigation/nav_profile.png') }}" alt="Profile"></a></li>
-        <li class="nav-button"><a href="/leaderboard" class="nav-link" data-target="leaderboard"><img src="{{ url_for('static', filename='navigation/nav_score.png') }}" alt="Score"></a></li>
-    </ul>
-</nav>
-<header>
-    <h1>Leaderboard</h1>
-    <input type="text" id="searchInput" onkeyup="filterItems()" placeholder="Search for User Name...">
-</header>
 <body>
+    {% include "navbar.html" %}
+    <h1>Leaderboard</h1>
+        <input type="text" id="searchInput" onkeyup="filterItems()" placeholder="Search for User Name...">
     <div class="wooden">
         <h2><img src="../static/puzzle_list/line.png"></h2>
         <ul id="itemList">
             {% for user in users %}
                 <li class="filterable">
                     <a href="/profile/{{ user.username }}">
-                        {{ user.username }} - Total Score: {{ user.overall_score }}}
+                        {{ user.username }} - Total Score: {{ user.overall_score }}
                     </a>
                 </li>
                 {% if loop.index < 10 %}
@@ -41,10 +31,7 @@
         </ul>
     </div>
     
-    <footer>
-        <a href="https://github.com/wuryantoAji/cits5505GroupProject.git" target="_blank"><img src="../static/puzzle_list/githubicon.png" width="25px" height="25px"></a>
-        <p>Group 21 - Wordle Maker</p>
-    </footer>
+    {% include "footer.html" %}
 </body>
 
 <script>
