--- a/application/static/css/leaderboard.css
+++ b/application/static/css/leaderboard.css
@@ -5,73 +5,69 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-image: url("../loginpage/BACKGROUND-PIC.png");
+    background-image: url(../background_score_list.png);
     background-size: cover;
-    background-position: relative;
-}
+  }
 
-nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0.8);
-}
-
-ul.nav-list {
-    list-style-type: none;
-    display: flex;
-    margin: 0;
-    padding: 10px;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.nav-home {
-    margin-right: auto;
-    background-color: rgba(255, 255, 255, 0.5);
-    border-radius: 2px;
-}
-
-header {
-    font-family: 'Comic Sans MS', sans-serif;
-    width: 60%;
-    margin: 120px auto 0;
-    font-size: 2em;
-    color: #3b72ff;
-    background-color: transparent;
-    padding: 10px;
-    text-align: center;
-
+  nav {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+  }
+  
+  ul.nav-list {
+      list-style-type: none;
+      display: flex;
+      margin: 0;
+      padding: 10px;
+      justify-content: space-around;
+      align-items: center;
+  }
+  
+  .nav-home {
+      margin-right: auto;
+      background-color: rgba(255, 255, 255, 0.5);
+      border-radius: 2px;
+  }
+  
+  header {
+      font-family: 'Comic Sans MS', sans-serif;
+      width: 60%;
+      margin: 120px auto 0;
+      font-size: 2em;
+      color: #3b72ff;
+      background-color: transparent;
+      padding: 10px;
+      text-align: center;
+  
     #searchInput {
-        font-size: 1em;
-        width: 100%;
-        padding: 8px;
+      font-size: 1em;
+      width: 100%;
+      padding: 8px;
     }
-
+  
     #searchInput::placeholder {
-        font-size: 1em;
-        color: #bcbaba;
+      font-size: 1em;
+      color: #bcbaba;
     }
-}
+  }
 
-.wooden {
-    background-image: url('../static/leaderboard/wooden_frame.png');
+  .wooden {
+    background-image: url("../static/leaderboard/wooden_frame.png");
     background-size: 85%;
     background-repeat: no-repeat;
     background-position: center;
     padding: 20px;
     text-align: center;
-}
-
-.wooden h1 {
+  }
+  
+  .wooden h1 {
     margin-top: 100px;
     line-height: 1.5;
-}
-
-.wooden ul {
+  }
+  
+  .wooden ul {
     list-style: none;
     padding: 0;
-}
-
-
+  }
