fix html from validator

--- a/application/templates/leaderboard.html
+++ b/application/templates/leaderboard.html
@@ -23,7 +23,7 @@
         onkeyup="filterItems()"
         placeholder="Search for User Name...">
       <div class="wooden">
-          <h2><img src="../static/puzzle_list/line.png"></h2>
+          <h2><img src="../static/puzzle_list/line.png" alt="separator"></h2>
           <ul id="itemList">
               {% for user in users %}
                   <li class="filterable">
